# chainlit-gemini-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  install_uv.sh  pyproject.toml  requirements.txt
src/chainlit_gemini_mcp/: app.py  gemini_client.py  mcp_utils.py
tests/: test_app.py  test_utils.py
