[project]
name = "chainlit-gemini-mcp-app"
version = "0.1.0"
description = "Chainlit application using Gemini API and MCP tools."
requires-python = ">=3.9"
dependencies = [
    "chainlit>=1.0.0,<2.0.0",
    "google-generativeai>=0.5.0,<0.6.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytest>=7.0.0,<8.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
