[project]
name = "chainlit-gemini-mcp"
version = "0.1.0"
description = "Chainlit example integrating Gemini with MCP"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "google-genai>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
